--- a/Project-1.ipynb
+++ b/Project-1.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,6 @@
     "from scipy.linalg import *\n",
     "from scipy.integrate import *\n",
     "from scipy.signal import *\n",
-    "\n",
     "from matplotlib.pyplot import *"
    ]
   },
@@ -99,11 +98,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5\n"
+     ]
+    }
+   ],
    "source": [
-    "pass"
+    "L = 0.5\n",
+    "R = 0.3"
    ]
   },
   {
@@ -119,12 +127,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "def draw_wheelchair(x, y, theta):\n",
-    "    pass"
+    "    pass\n"
    ]
   },
   {
@@ -353,7 +361,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -367,7 +375,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
