--- a/Project-1.ipynb
+++ b/Project-1.ipynb
@@ -203,7 +203,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:**\n",
+    "Soit la vitesse de la roue gauche : Vl = R.𝜔𝑙\n",
+    "\n",
+    "Et celle de la roue droite : Vr = R.𝜔𝑟\n",
+    "\n",
+    "et la vitesse de la chaise roulante est V = R/2(𝜔𝑙+𝜔𝑟)\n",
+    "\n",
+    "Donc par projection sur l'axe X et l'axe Y on obtient :\n",
+    "\n",
+    "dx/dt = R/2(𝜔𝑙+𝜔𝑟)cos(𝜃)\n",
+    "\n",
+    "dy/dt = R/2(𝜔𝑙+𝜔𝑟)sin(𝜃)\n",
+    "\n",
+    "ainsi d𝜃/dt = (𝜔𝑟-𝜔𝑙)R/L\n",
+    "\n"
    ]
   },
   {
@@ -219,7 +233,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:** \n"
+    "**Answer: ** \n"
    ]
   },
   {
