--- a/Project-1.ipynb
+++ b/Project-1.ipynb
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,12 +280,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
     "def fun(t, xytheta):\n",
-    "    pass"
+    "    omega_l, omega_r = omega(t, xytheta)\n",
+    "    x, y, theta = xytheta\n",
+    "    x_prime = R/2 * (omega_l + omega_r) * np.cos(theta)\n",
+    "    y_prime = R/2 * (omega_l + omega_r) * np.sin(theta)\n",
+    "    theta_prime = R/L * (omega_r - omega_l)\n",
+    "    return array([x_prime,y_prime,theta_prime])"
    ]
   },
   {
