--- a/Project-1.ipynb
+++ b/Project-1.ipynb
@@ -210,13 +210,15 @@
     "\n",
     "et la vitesse de la chaise roulante est V = R/2(𝜔𝑙+𝜔𝑟)\n",
     "\n",
-    "Donc par projection sur l'axe X et l'axe Y on obtient :\n",
+    "de même on a : 𝑥˙=Vcos(𝜃), 𝑦˙=Vsin(𝜃) 𝜃˙ = (Vr-Vl)R/L\n",
     "\n",
-    "dx/dt = R/2(𝜔𝑙+𝜔𝑟)cos(𝜃)\n",
+    "donc en remplaçant dans les relations on obtient :\n",
     "\n",
-    "dy/dt = R/2(𝜔𝑙+𝜔𝑟)sin(𝜃)\n",
+    "𝑥˙ = R/2(𝜔𝑙+𝜔𝑟)cos(𝜃)\n",
     "\n",
-    "ainsi d𝜃/dt = (𝜔𝑟-𝜔𝑙)R/L\n",
+    "𝑦˙ = R/2(𝜔𝑙+𝜔𝑟)sin(𝜃)\n",
+    "\n",
+    "𝜃˙ = (𝜔𝑟-𝜔𝑙)R/L\n",
     "\n"
    ]
   },
