--- a/Project-2.ipynb
+++ b/Project-2.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,12 +554,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def omega(t, xytheta):\n",
-    "    pass"
+    "    if t <= 1 or t >= 3:\n",
+    "        wl = (1 - L/4) * math.pi / Rw\n",
+    "        wr = (1 + L/4) * math.pi / Rw\n",
+    "    else:\n",
+    "        wl = (1 + L/4) * math.pi / Rw\n",
+    "        wr = (1 - L/4) * math.pi / Rw\n",
+    "    \n",
+    "    return [wl, wr]"
    ]
   },
   {
@@ -575,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1157,7 +1164,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1171,7 +1178,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
