--- a/Project-2.ipynb
+++ b/Project-2.ipynb
@@ -666,7 +666,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:**\n",
+    "\n",
+    "On a $\\dot{x} = \\frac{R_w}{2}(\\omega_l + \\omega_r)\\cos(\\theta)$\n",
+    "\n",
+    "$\\dot{y} = \\frac{R_w}{2}(\\omega_l + \\omega_r)\\sin(\\theta)$\n",
+    "\n",
+    "$\\dot{\\theta} = \\frac{R_w}{L}(\\omega_r - \\omega_l)$\n",
+    "\n",
+    "Donc à l'état d'équilibre : 𝑋𝑒=(𝑥𝑒,𝑦𝑒,𝜃𝑒)=(0,0,0) veut dire que \n",
+    "\n",
+    "𝑅𝑤(𝜔𝑙e+𝜔𝑟e)/2 = 0 et 𝑅𝑤(𝜔𝑟e−𝜔𝑙e)/𝐿 = 0\n",
+    "\n",
+    "ça nous donne le système 𝜔𝑙e+𝜔𝑟e=0 et 𝜔𝑟e−𝜔𝑙e=0 \n",
+    "\n",
+    "d'ou 𝜔𝑒 = (𝜔𝑙e,𝜔𝑟e) = (0,0)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -682,7 +698,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:** "
+    "**Answer:** \n",
+    "\n",
+    "Supposons qu'il existe 𝜔𝑒=(𝜔𝑙𝑒,𝜔𝑟𝑒) tq 𝑋𝑒=(𝑥𝑒,𝑦𝑒,𝜃𝑒)≠(0,0,0)\n",
+    "\n",
+    "$\\dot{x} = \\frac{R_w}{2}(\\omega_l + \\omega_r)\\cos(\\theta)$\n",
+    "\n",
+    "$\\dot{y} = \\frac{R_w}{2}(\\omega_l + \\omega_r)\\sin(\\theta)$\n",
+    "\n",
+    "$\\dot{\\theta} = \\frac{R_w}{L}(\\omega_r - \\omega_l)$\n",
+    "\n",
+    "dans l'état d'équilibre :  \n",
+    "\n",
+    "$\\frac{R_w}{2}(\\omega_l+\\omega_r)\\cos(\\theta_e) = 0$\n",
+    "\n",
+    "$\\frac{R_w}{2}(\\omega_l+\\omega_r)\\sin(\\theta_e) = 0$\n",
+    "\n",
+    "$\\frac{R_w}{L}(\\omega_r-\\omega_l) = 0$\n",
+    "\n",
+    "Donc : \n",
+    "$\\frac{R_w}{2}(\\omega_l+\\omega_r)^2 = 0$\n",
+    "\n",
+    "et $\\omega_r = \\omega_l$\n",
+    "\n",
+    "Donc le système n'est pas en équilibre pour tout autre 𝜔𝑒 différent de (0,0)\n"
    ]
   },
   {
