--- a/Project-2.ipynb
+++ b/Project-2.ipynb
@@ -737,7 +737,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:**\n",
+    "\n",
+    "Si $\\omega = \\omega_e$\n",
+    "\n",
+    "$\\frac{R_w}{2}(0)\\cos(\\theta_e) = 0$\n",
+    "\n",
+    "$\\frac{R_w}{2}(0)\\sin(\\theta_e) = 0$\n",
+    "\n",
+    "$\\frac{R_w}{L}(0) = 0$\n",
+    "\n",
+    "donc tout 𝑋𝑒=(𝑥𝑒,𝑦𝑒,𝜃𝑒) est un point d'équilibre"
    ]
   },
   {
