Linearized system model

--- a/Project-2.ipynb
+++ b/Project-2.ipynb
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -773,7 +773,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer: **\n",
+    "Soit 𝜔=𝜔𝑒 et 𝑋𝑒=(0,0,0) et soit Δ𝑋=(Δ𝑥,Δ𝑦,Δ𝜃)=𝑋−𝑋𝑒 et Δ𝜔=(Δωl,Δωr)=𝜔−𝜔𝑒\n",
+    "\n",
+    "ΔX˙=AΔX+BΔω\n",
+    "\n",
+    "donc : \\begin{equation} \\mathbf{A} = \\begin{bmatrix} 0 & 0 & -𝑅𝑤(𝜔e𝑙+𝜔e𝑟)sin(𝜃)/2 \\\\ 0 & 0 & 𝑅𝑤(𝜔e𝑙+𝜔e𝑟)cos(𝜃𝑒)/2 \\\\ 0 & 0 & 0 \\\\ \\end{bmatrix} \\end{equation}\n",
+    "\n",
+    "et : \\begin{equation} \\mathbf{B} = \\begin{bmatrix} 𝑅𝑤.cos(𝜃)/2 & 𝑅𝑤.cos(𝜃)/2 \\\\ 𝑅𝑤.sin(𝜃)/2 & 𝑅𝑤.sin(𝜃)/2 \\\\ -𝑅𝑤/L & 𝑅𝑤/L \\\\ \\end{bmatrix} \\end{equation}\n",
+    "\n",
+    "Et puisque 𝑋𝑒=(0,0,0) et 𝜔=𝜔𝑒 on obtient : \n",
+    "\\begin{equation} \\mathbf{A} = \\begin{bmatrix} 0 & 0 & 0 \\\\ 0 & 0 & 0 \\\\ 0 & 0 & 0 \\\\ \\end{bmatrix} \\end{equation}\n",
+    "\n",
+    "et \\begin{equation} \\mathbf{B} = \\begin{bmatrix} 𝑅𝑤/2 & 𝑅𝑤/2 \\\\ 0 & 0 \\\\ -𝑅𝑤/L & 𝑅𝑤/L \\\\ \\end{bmatrix} \\end{equation}"
    ]
   },
   {
