Linearized system model

--- a/Project-2.ipynb
+++ b/Project-2.ipynb
@@ -778,11 +778,11 @@
     "\n",
     "ΔX˙=AΔX+BΔω\n",
     "\n",
-    "donc : \\begin{equation} \\mathbf{A} = \\begin{bmatrix} 0 & 0 & -𝑅𝑤(𝜔e𝑙+𝜔e𝑟)sin(𝜃)/2 \\\\ 0 & 0 & 𝑅𝑤(𝜔e𝑙+𝜔e𝑟)cos(𝜃𝑒)/2 \\\\ 0 & 0 & 0 \\\\ \\end{bmatrix} \\end{equation}\n",
+    "donc : \\begin{equation} \\mathbf{A} = \\begin{bmatrix} 0 & 0 & -𝑅𝑤(𝜔𝑙+𝜔𝑟)sin(𝜃)/2 \\\\ 0 & 0 & 𝑅𝑤(𝜔𝑙+𝜔𝑟)cos(𝜃)/2 \\\\ 0 & 0 & 0 \\\\ \\end{bmatrix} \\end{equation}\n",
     "\n",
     "et : \\begin{equation} \\mathbf{B} = \\begin{bmatrix} 𝑅𝑤.cos(𝜃)/2 & 𝑅𝑤.cos(𝜃)/2 \\\\ 𝑅𝑤.sin(𝜃)/2 & 𝑅𝑤.sin(𝜃)/2 \\\\ -𝑅𝑤/L & 𝑅𝑤/L \\\\ \\end{bmatrix} \\end{equation}\n",
     "\n",
-    "Et puisque 𝑋𝑒=(0,0,0) et 𝜔=𝜔𝑒 on obtient : \n",
+    "Et puisque 𝑋𝑒=(0,0,0) et 𝜔=𝜔𝑒 on remplace et on obtient : \n",
     "\\begin{equation} \\mathbf{A} = \\begin{bmatrix} 0 & 0 & 0 \\\\ 0 & 0 & 0 \\\\ 0 & 0 & 0 \\\\ \\end{bmatrix} \\end{equation}\n",
     "\n",
     "et \\begin{equation} \\mathbf{B} = \\begin{bmatrix} 𝑅𝑤/2 & 𝑅𝑤/2 \\\\ 0 & 0 \\\\ -𝑅𝑤/L & 𝑅𝑤/L \\\\ \\end{bmatrix} \\end{equation}"
@@ -810,7 +810,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:** "
+    "**Answer:** \n"
    ]
   },
   {
