Stabilité et controlabilité

--- a/Project-2.ipynb
+++ b/Project-2.ipynb
@@ -773,7 +773,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: **\n",
+    "**Answer:**\n",
     "Soit 𝜔=𝜔𝑒 et 𝑋𝑒=(0,0,0) et soit Δ𝑋=(Δ𝑥,Δ𝑦,Δ𝜃)=𝑋−𝑋𝑒 et Δ𝜔=(Δωl,Δωr)=𝜔−𝜔𝑒\n",
     "\n",
     "ΔX˙=AΔX+BΔω\n",
@@ -810,7 +810,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:** \n"
+    "**Answer:** \n",
+    "Le modèle linéarisé est instable autour de (0,0,0) et lorsque Δ𝜔=(0,0) car $\\Delta\\dot{X} = A\\Delta X$ et les valeurs propres de A sont toutes égales à zéro (leurs parties réelles est nulles)"
    ]
   },
   {
@@ -864,7 +865,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:**\n",
+    "\n"
    ]
   },
   {
@@ -896,7 +898,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:**\n",
+    "Pour vérifier la controlabilité, on procède par la matrice de controlabilité :\n",
+    "\\begin{equation} \\mathcal{C} = \\begin{bmatrix} \\mathbf{B} & \\mathbf{AB} & \\mathbf{A}^2\\mathbf{B} \\end{bmatrix} \\end{equation}\n",
+    "\n",
+    "Pour que le système soit controlable il faut que le rang = 3\n",
+    "\n",
+    "donc : \n",
+    " \\begin{equation} \\mathbf{C} = \\begin{bmatrix} 𝑅𝑤/2 & 𝑅𝑤/2 & 0 \\\\ 0 & 0 & 0 \\\\ -𝑅𝑤/L & 𝑅𝑤/L & 0 \\\\ \\end{bmatrix} \\end{equation}\n",
+    "\n",
+    "Le rang de la matrice est 2 inférieur à la dimension de l'espace, donc le système est incontrolable"
    ]
   },
   {
