--- a/Project-2.ipynb
+++ b/Project-2.ipynb
@@ -827,7 +827,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "🔓 **Answer:**"
+    "🔓 **Answer:**\n",
+    "Le système original n'est pas asymptotiquement stable ni localement attractif car le point d'équilibre (0,0,0) n'est pas globalement stable et les trajectoires ne convergent pas vers lui pour n'importe quelle condition initiale.\n"
    ]
   },
   {
@@ -865,8 +866,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**\n",
-    "\n"
+    "**Answer:**\n"
    ]
   },
   {
@@ -941,7 +941,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:**\n"
    ]
   },
   {
