Control on a straight line

--- a/Project-2.ipynb
+++ b/Project-2.ipynb
@@ -810,8 +810,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:** \n",
-    "Le modèle linéarisé est instable autour de (0,0,0) et lorsque Δ𝜔=(0,0) car $\\Delta\\dot{X} = A\\Delta X$ et les valeurs propres de A sont toutes égales à zéro (leurs parties réelles est nulles)"
+    "**Answer:** Pour que le modèle soit asymptotiquement stable la matrice d'état A doit avoir toutes les valeurs propres avec une partie réelle strictement négative.\n",
+    "Dans notre cas le modèle linéarisé n'est pas asymptotiquement stable autour de (0,0,0)  car A a une seule valeur propre 0 de multiplicité 3 "
    ]
   },
   {
@@ -941,7 +941,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**\n"
+    "**Answer**\n",
+    "\n",
+    "Soit 𝑥𝑅(𝑡)=𝑣𝑡 et 𝑦𝑅(𝑡)=0 et $\\dot{y} = \\frac{R_w}{2}(\\omega_l + \\omega_r)\\sin(\\theta) = 0$ \n",
+    "\n",
+    "donc 𝜔𝑙+𝜔𝑟 = 0 ou bien sin(𝜃) = 0, or 𝜔𝑙+𝜔𝑟 =! 0 car 𝑥𝑅(𝑡)=𝑣𝑡 =!0\n",
+    "\n",
+    "donc sin(𝜃)=0 d'où $θ = kπ$ avec $k ∈ \\mathbb{Z}$\n",
+    "\n",
+    "on se retrouve donc avec :\n",
+    "\n",
+    "$\\dot{x} = \\frac{R_w}{2}(\\omega_l + \\omega_r)\\cos(\\theta) = v $  avec  $cos(\\theta) = 1$ ou $cos(\\theta) = -1$ \n",
+    "\n",
+    "$\\dot{y} = 0 $\n",
+    "\n",
+    "$\\dot{\\theta} = \\frac{R_w}{L}(\\omega_r - \\omega_l) = 0$\n",
+    "\n",
+    "Si on marche en avant : $$ \\mathbf{ω_R(t)} =  \\left( \\begin{array}{c} v /R_w \\\\ v /R_w   \\end{array}\\right)$$\n",
+    "Si on marche en arrière : $$ \\mathbf{ω_R(t)} =  \\left( \\begin{array}{c} -v /R_w \\\\ -v /R_w   \\end{array}\\right)$$\n"
    ]
   },
   {
@@ -971,7 +988,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:**\n",
+    "\n",
+    "On a : \\begin{equation} \\mathbf{A} = \\begin{bmatrix} 0 & 0 & 0 \\\\ 0 & 0 & v \\\\ 0 & 0 & 0 \\\\ \\end{bmatrix} \\end{equation}\n",
+    "\n",
+    "et \\begin{equation} \\mathbf{B} = \\begin{bmatrix} 𝑅𝑤/2 & 𝑅𝑤/2 \\\\ 0 & 0 \\\\ -𝑅𝑤/L & 𝑅𝑤/L \\\\ \\end{bmatrix} \\end{equation}\n",
+    "\n",
+    "tel que : \n",
+    "\n",
+    "$$\n",
+    "\\frac{\\Delta X}{dt} = A \\Delta X + B\\Delta u\n",
+    "$$"
    ]
   },
   {
