--- a/Project-2.ipynb
+++ b/Project-2.ipynb
@@ -866,7 +866,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**\n"
+    "**Answer:**\n",
+    "Cherchons Δ𝑢=(𝜔𝑙,𝜔𝑟) tel que le système admet une trajectoire admissible qui commence de 𝑋0=(−2,0,0) et finit à l'origine\n",
+    "\n",
+    "On a $$\n",
+    "\\frac{\\Delta X}{dt} = A \\Delta X + B\\Delta u\n",
+    "$$ avec A nul\n",
+    "\n",
+    "et \\begin{equation} \\mathbf{B} = \\begin{bmatrix} 𝑅𝑤/2 & 𝑅𝑤/2 \\\\ 0 & 0 \\\\ -𝑅𝑤/L & 𝑅𝑤/L \\\\ \\end{bmatrix} \\end{equation}\n",
+    "\n",
+    "D'où $\\frac{\\Delta X}{dt} = \\begin{bmatrix} 𝑅𝑤/2.(𝜔𝑙+𝜔𝑟) \\\\ 0 \\\\ -𝑅𝑤/L(𝜔𝑙-𝜔𝑟) \\\\ \\end{bmatrix}$\n",
+    "\n",
+    "D'où pour 𝜔𝑙 = 𝜔𝑟 on a : $\\frac{\\Delta X}{dt} = \\begin{bmatrix} 𝑅𝑤*𝜔𝑙 \\\\ 0 \\\\ 0 \\\\ \\end{bmatrix}$\n",
+    "\n",
+    "D'ou le système admet une trajectoire admissible qui commence de 𝑋0=(−2,0,0) et finit à l'origine\n",
+    "\n"
    ]
   },
   {
@@ -882,7 +896,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:**\n",
+    "On a :\n",
+    "\n",
+    "$\\frac{\\Delta X}{dt} = \\begin{bmatrix} 𝑅𝑤/2.(𝜔𝑙+𝜔𝑟) \\\\ 0 \\\\ -𝑅𝑤/L(𝜔𝑙-𝜔𝑟) \\\\ \\end{bmatrix}$\n",
+    "\n",
+    "Donc $\\dot{y} = 0$\n",
+    "\n",
+    "Ainsi on ne peut pas arrivee à l'origine depuis (0,2,0) car avec vitesse selon Y nulle on ne peut pas faire cette trajectoire"
    ]
   },
   {
@@ -1014,7 +1035,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:**\n",
+    "Le modèle linéarisé n'est pas asymptotiquement stable autour de (0,0,0) car A a une seule valeur propre 0 et pour que le modèle soit asymptotiquement stable la matrice d'état A doit avoir toutes les valeurs propres avec une partie réelle strictement négative."
    ]
   },
   {
