Linearized system implementation

--- a/Project-2.ipynb
+++ b/Project-2.ipynb
@@ -1094,11 +1094,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A = \n",
+      "[[0.   0.   0.  ]\n",
+      " [0.   0.   1.33]\n",
+      " [0.   0.   0.  ]]\n",
+      "\n",
+      "B = \n",
+      "[[ 0.15  0.15]\n",
+      " [ 0.    0.  ]\n",
+      " [-0.6   0.6 ]]\n"
+     ]
+    }
+   ],
    "source": [
-    "pass"
+    "v = 1.33  # m/s\n",
+    "\n",
+    "A = np.array([[0, 0, 0],\n",
+    "              [0, 0, v],\n",
+    "              [0, 0, 0]])\n",
+    "\n",
+    "B = np.array([[Rw/2, Rw/2],\n",
+    "              [0, 0],\n",
+    "              [-Rw/L, Rw/L]])\n",
+    "\n",
+    "print(\"A = \")\n",
+    "print(A)\n",
+    "print(\"\\nB = \")\n",
+    "print(B)\n"
    ]
   },
   {
