Controller Design on the linearized system

--- a/Project-2.ipynb
+++ b/Project-2.ipynb
@@ -1052,7 +1052,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:**\n",
+    "Quand $\\Delta \\omega = (0,0)$ le système n'est pas localement attractif car $\\Delta X $ est constante ( $\n",
+    "\\frac{\\Delta X}{dt} =0) $ , et  $\\theta $ et $y $ sont constantes (d'apres les conditions initiales)"
    ]
   },
   {
@@ -1068,7 +1070,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:**\n",
+    "On a le rang de la matrice de controlabilité\n",
+    "\\begin{equation} \\mathcal{C} = \\begin{bmatrix} \\mathbf{B} & \\mathbf{AB} & \\mathbf{A}^2\\mathbf{B} \\end{bmatrix} \\end{equation}\n",
+    "est égal à 3 donc on conclut que le système est controlable"
    ]
   },
   {
@@ -1156,12 +1161,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "def lin_fun(t, deltaX):\n",
-    "    pass"
+    "    delta_x_dot = dot(A, deltaX) + dot(B, deltaOmega(t, deltaX))\n",
+    "    return delta_x_dot"
    ]
   },
   {
@@ -1190,11 +1196,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.66666667 -0.16287464 -0.84991656]\n",
+      " [ 1.66666667  0.16287473  0.84991678]]\n"
+     ]
+    }
+   ],
    "source": [
-    "pass"
+    "poles = array([-0.52, -0.5, -0.4999])\n",
+    "\n",
+    "K = place_poles(A, B, poles).gain_matrix\n",
+    "print(K)"
    ]
   },
   {
