Controller Design on the linearized system

--- a/Project-2.ipynb
+++ b/Project-2.ipynb
@@ -828,7 +828,7 @@
    "metadata": {},
    "source": [
     "🔓 **Answer:**\n",
-    "Le système original n'est pas asymptotiquement stable ni localement attractif car le point d'équilibre (0,0,0) n'est pas globalement stable et les trajectoires ne convergent pas vers lui pour n'importe quelle condition initiale.\n"
+    "Comme le système est à l'état stationnaire avec w=0 donc il reste immobile dans sa position initiale 𝑋0=(0,0,0) pour tout t. Si on suppose que 𝑋0 est différent de (0,0,0) dans ce cas le système évoluera à partir de sa position initiale et ne retournera jamais à l'origine du système. Ainsi, on conclut que le système n'est ni asymptotiquement stable ni localement stable."
    ]
   },
   {
@@ -1224,11 +1224,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pass"
+    "def deltaOmega(t, deltaX):\n",
+    "    return dot(-K, deltaX)\n",
+    "\n",
+    "deltaX0 = array([0, 2, 0])\n",
+    "t = linspace(0, 20, 1000)\n",
+    "r = solve_ivp(fun=lin_fun, t_span =t, y0=deltaX0, dense_output=True, atol = 1e-6, rtol = 1e-10)"
    ]
   },
   {
@@ -1240,12 +1245,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "pass"
-   ]
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'res' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-37-c94b39210bfa>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mt\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mres\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mt\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mdeltaX\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mres\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mdeltaY\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mres\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mdeltaTheta\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mres\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'res' is not defined"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1258,7 +1273,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:**\n",
+    "\n",
+    "Afin de garder le systeme sur une trajectoire lineaire, il faut que $\\Delta{\\theta}(t) $\n",
+    "soit petite car toute modification de $\\Delta{\\theta}(t) $ peut entraîner de grands changements de trajectoire."
    ]
   },
   {
