--- a/Project-3.ipynb
+++ b/Project-3.ipynb
@@ -2133,15 +2133,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pass"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2195,7 +2186,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:**\n",
+    "On différencie les équations au dessus et on obtient : \n",
+    "\n",
+    "$\\dot{x_f} = \\dot{x} - (M+L)\\times\\dot{\\theta}\\sin(\\theta)$\n",
+    "\n",
+    "$\\dot{y_f} = \\dot{y} + (M+L)\\times\\dot{\\theta}\\cos(\\theta)$\n",
+    "\n",
+    "et on a : \n",
+    "\n",
+    "$$\n",
+    "\\begin{array}{rcl}\n",
+    "\\dot{x} &=& R_w  \\frac{\\omega_l + \\omega_r}{2} \\cos \\theta  \\\\\n",
+    "\\dot{y} &=& R_w  \\frac{\\omega_l + \\omega_r}{2} \\sin \\theta\\\\\n",
+    "\\dot{\\theta} &=& R_w  \\frac{\\omega_r - \\omega_l}{L} \\\\\n",
+    "\\end{array}\n",
+    "$$\n",
+    "\n",
+    "donc :\n",
+    "\n",
+    "$\\dot{x_f} = R_w\\frac{\\omega_l + \\omega_r}{2}\\cos(\\theta) - (M+L)\\times R_w\\frac{\\omega_r - \\omega_l}{L}\\sin(\\theta) $\n",
+    "\n",
+    "$\\dot{y_f} = R_w\\frac{\\omega_l + \\omega_r}{2}\\sin(\\theta) + (M+L)\\times R_w\\frac{\\omega_r - \\omega_l}{L}\\cos(\\theta)$\n"
    ]
   },
   {
